# automata

./: .coveragerc  .editorconfig  .gitignore  .mypy.ini  .noseids  .pre-commit-config.yaml  .travis.yml  .venv  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MIGRATION.md  README.md  Sin título0.py  dfa.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.docs.txt  requirements.txt  setup.py  sitecustomize.py  sitemap.xml  tasks.py  test.py
.github/: CONTRIBUTING.md  RELEASE_CHECKLIST.md
.github/workflows/: build.yml  docs.yml  draft-pdf.yml  format.yml  lint.yml  publish.yml  tests.yml
api/: index.html
api/base-exception-classes/: index.html
api/class-automaton/: index.html
api/fa/class-dfa/: index.html
api/fa/class-fa/: index.html
api/fa/class-gnfa/: index.html
api/fa/class-nfa/: index.html
api/pda/class-dpda/: index.html
api/pda/class-npda/: index.html
api/pda/class-pda/: index.html
api/regular-expressions/: index.html
api/tm/class-dtm/: index.html
api/tm/class-mntm/: index.html
api/tm/class-ntm/: index.html
api/tm/class-tm/: index.html
api/tm/tm-exception-classes/: index.html
automata/: automaton.py  dfa.py  fa.py  nfa.py
automata/base/: animation.py  automaton.py  config.py  exceptions.py  regex.py  utils.py
automata/fa/: animation.py  dfa.py  fa.py  gnfa.py  nfa.py
automata/parse/: lexer.py  parser.py  postfix.py
automata/parser/: lexer.py  parser.py  postfix.py
automata/pda/: configuration.py  dpda.py  exceptions.py  npda.py  pda.py  stack.py
automata/regex/: lexer.py  parser.py  postfix.py  regex.py
automata/shared/: automaton.py  exceptions.py
automata/tm/: configuration.py  dtm.py  exceptions.py  mntm.py  ntm.py  tape.py  tm.py  tools.py
characteristics/: index.html
docs/: README.md  about.md  base-exception-classes.md  characteristics.md  class-automaton.md  index.md  introduction.md  migration.md  people.md  regular-expressions.md
docs/api/: base-exception-classes.md  class-automaton.md  index.md  regular-expressions.md
docs/api/fa/: class-dfa.md  class-fa.md  class-gnfa.md  class-nfa.md
docs/api/pda/: class-dpda.md  class-npda.md  class-pda.md
docs/api/tm/: class-dtm.md  class-mntm.md  class-ntm.md  class-tm.md  tm-exception-classes.md
docs/examples/: fa-examples.md  perf-examples.md  teaching-examples.md
docs/fa/: class-dfa.md  class-fa.md  class-gnfa.md  class-nfa.md  examples.md
docs/notebooks/: DFA.ipynb
docs/pda/: class-dpda.md  class-npda.md  class-pda.md
docs/tm/: class-dtm.md  class-mntm.md  class-ntm.md  class-tm.md  tm-exception-classes.md
example_notebooks/: DFA.ipynb  fa_animation.ipynb
examples/fa-examples/: index.html
examples/perf-examples/: index.html
joss/: paper.bib  paper.md
migration/: index.html
people/: index.html
search/: search_index.json
tests/: __init__.py  optional.py  test_automaton.py  test_compliance.py  test_config.py  test_dfa.py  test_dfa_operations.py  test_dpda.py  test_dtm.py  test_fa.py  test_gnfa.py  test_lexer.py  test_mntm.py  test_nfa.py  test_nfa2dfa_epsilon_start.py  test_nfa_operations.py  test_npda.py  test_ntm.py  test_pda.py  test_pdaconfiguration.py  test_pdastack.py  test_postfix.py  test_regex.py  test_serialization.py  test_tm.py  test_tmconfiguration.py  test_tmtape.py  test_tmtools.py
tests/files/: dfa.json  nfa.json
tests/test_dfa/: base.py  test_construction.py  test_conversions.py  test_enumeration.py  test_finite_language.py  test_length_constraints.py  test_minify.py  test_pattern_constructors.py  test_properties.py  test_set_operations.py  test_visualization.py
tests/test_dpda/: base.py  test_acceptance.py  test_construction.py  test_visualization.py
tests/test_dtm/: base.py  test_construction.py  test_runtime.py  test_validation.py
tests/test_gnfa/: base.py  test_construction.py  test_regex.py  test_validation.py  test_visualization.py
tests/test_mntm/: base.py  test_construction.py  test_runtime.py  test_validation.py
tests/test_nfa/: base.py  test_construction.py  test_distance.py  test_operations.py  test_regex_conversions.py  test_visualization.py
tests/test_npda/: base.py  test_acceptance.py  test_construction.py  test_validation.py  test_visualization.py
tests/test_ntm/: base.py  test_construction.py  test_runtime.py  test_validation.py
turingmachines/: dtm.py  tape.py  tm.py  tools.py
