[project]
name = "automata-lib"
version = "7.1.0"
description = "A Python library for simulating finite automata, pushdown automata, and Turing machines"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["automata", "finite", "non-deterministic", "pushdown", "turing", "machine", "state"]
license = {file = 'LICENSE.txt'}
authors = [
    {name = 'Caleb Evans', email = 'caleb@calebevans.me'}
]
maintainers = [
    {name = 'Caleb Evans', email = 'caleb@calebevans.me'}
]
dependencies = [
    "networkx>=2.6.2",
    "frozendict>=2.3.4",
    "typing-extensions>=4.5.0",
    "cached_method>=0.1.0"
]

# Per https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
[project.optional-dependencies]
visual = ["coloraide>=1.8.2", "pygraphviz>=1.10"]

[tool.setuptools.package-data]
"automata" = ["py.typed"]

[project.urls]
homepage = "https://github.com/caleb531/automata"
documentation = "https://github.com/caleb531/automata#readme"
repository = "https://github.com/caleb531/automata"
changelog = "https://github.com/caleb531/automata/releases"

[build-system]
requires = ["setuptools", "wheel"]

[tool.mypy]
exclude = ["build"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "setuptools.*",
  "networkx.*",
  "pygraphviz.*",
  "cached_method.*"
]
ignore_missing_imports = true

[tool.flake8]
# Black compatibility
max-line-length = 88
extend-ignore = ["E203", "W503"]

# Per <https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile>
[tool.isort]
profile = "black"


# Configuration for coverage.py (https://pypi.python.org/pypi/coverage)

[tool.coverage.run]
# Enable branch coverage
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    # Ignore non-runnable code
    "if __name__ == .__main__.:",
    "pass",
]

# Only check coverage for source files
include =["automata/*/*.py"]
